--- a/main_style.css
+++ b/main_style.css
@@ -4,10 +4,11 @@ html, body{
     min-height: 100vh;
     background-color: rgb(244, 244, 244);
     font-family: 'Calibri';
+    user-select: none;
 }
 
 #NavBar{
-    background: rgb(155, 255, 197);
+    background: rgb(175 255 209);
     margin: 0;
     text-align: center;
     font-size: 2rem;
@@ -87,6 +88,7 @@ html, body{
     animation-duration: 1s;
     animation-fill-mode: forwards;
     animation-timing-function: ease-out;
+    justify-content: center;
 }
 
 @keyframes SideMenu_Display{
@@ -117,6 +119,26 @@ html, body{
     }
 }
 
+#SideMenu_Home_AcomplishedTasks_StadisticsANDHelp{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 600;
+    padding: 2rem 0;
+    align-content: center;
+}
+
+#SideMenu_Home_AcomplishedTasks_StadisticsANDHelp span{
+    padding: 1.5rem 0.5rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.07);
+}
+
+#SideMenu_Help_Button{
+    border-bottom: none;
+}
+
+
 #SideMenu_ScreenFilter{
     display: flex;
     position: fixed;
@@ -125,4 +147,55 @@ html, body{
     top: 0;
     width: 100vw;
     height: 100vh;
+}
+
+
+#NewTask_InputDisplay{
+    display: flex;
+    width: 80vw;
+    height: 45vh;
+    background-color: rgb(252 252 252);
+    position: fixed;
+    top: 22.5vh;
+    z-index: 5;
+    left: calc(50% - 40vw);
+}
+
+#NewTask_Form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    padding: 3rem;
+}
+
+#NewTask_Form input{
+    height: 2rem;
+    outline: none;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    border: none;
+    background-color: rgb(244, 244, 244);
+}
+
+#NewTask_Date, #NewTask_Submit{
+    margin-top: 1rem;
+}
+
+#NewTask_Submit{
+    text-align: center;
+    height: 3rem !important;
+    padding: 1rem 0.5rem !important;
+    background-color: rgb(179 255 209) !important;
+}
+
+
+#NewTask_InputDisplay_ScreenFilter{
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    z-index: 4;
+    background-color: #00000030;
+    top: 0;
 }
