--- a/main_style.css
+++ b/main_style.css
@@ -31,9 +31,14 @@ html, body{
     left: 0;
     z-index: 4;
 }
+#NavBar_SideMenuIcon:hover, #NavBar_SideMenuIcon:active{
+    height: 50.5px;
+    margin-left: calc(1.5rem - 2.5px);
+    margin-top: -2.5px;
+}
 
 #NavBar_Logo{
-    background-image: url('LIst\ Logo.png');
+    background-image: url('LIst Logo.png');
     background-size: 124.5px 45.17px;
     background-position: center;
     background-repeat: no-repeat;
@@ -57,6 +62,9 @@ html, body{
     justify-content: center;
     font-weight: 300;
 }
+#NavBar_NewTaskButton:active, #NavBar_NewTaskButton:hover{
+    background-color: rgb(244, 244, 244);
+}
 
 
 .Unfinished_Tasks{
@@ -73,6 +81,10 @@ html, body{
     background-color: rgb(252, 252, 252);
     border-radius: 0.5rem;
     min-height: 3rem;
+}
+.Unfinished_Tasks li:active{
+    border: 7px solid rgb(175 255 209);
+    padding: calc(1rem - 7px) calc(1rem - 7px);
 }
 
 
@@ -191,6 +203,56 @@ html, body{
 
 
 #NewTask_InputDisplay_ScreenFilter{
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    z-index: 4;
+    background-color: #00000030;
+    top: 0;
+}
+
+
+#DeleteTask_Display{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80vw;
+    height: 45vh;
+    background-color: rgb(252 252 252);
+    position: fixed;
+    top: 22.5vh;
+    z-index: 5;
+    left: calc(50% - 40vw);
+}
+
+#DeleteTask_Display_Text{
+    font-size: 2.5rem;
+}
+
+#DeleteTask_Display_Buttons{
+    font-size: 2rem;
+    margin-top: 1rem;
+}
+
+#DeleteTask_Display_Buttons span{
+    background-color: rgb(179 255 209);
+    border-radius: 0.5rem;
+    padding: 0.2rem 1rem;
+}
+
+#DeleteTask_Display_Buttons span:nth-child(2){
+    margin-left: 0.7rem;
+}
+
+#DeleteTask_Display_Buttons span:hover, #DeleteTask_Display_Buttons span:active{
+    background-color: rgb(135 215 167);
+    color: white;
+}
+
+
+#DeleteTask_Display_Filter{
     display: flex;
     height: 100vh;
     width: 100vw;
