--- a/main_style.css
+++ b/main_style.css
@@ -67,6 +67,47 @@ html, body{
 }
 
 
+.Finished_Tasks{
+    font-size: 1.5rem;
+    list-style: none;
+    margin: 0;
+    padding: 0.5rem;
+    min-height: 88.8vh;
+}
+
+.Finished_Tasks li{
+    display: flex;
+    align-items: center;
+    margin: 0.2rem 0;
+    padding: 1rem 1rem;
+    background-color: rgb(252, 252, 252);
+    border-radius: 0.5rem;
+    min-height: 3rem;
+}
+.Finished_Tasks li:active{
+    border: 7px solid rgb(175 255 209);
+    padding: calc(1rem - 7px) calc(1rem - 7px);
+}
+
+.FinishedTasks_List_Item_CheckboxContainer{
+    width: 60px;
+    height: 30px;
+    background-color: rgb(240 240 240);
+    margin-right: 0.6rem;
+    border-radius: 5rem;
+    overflow: hidden;
+    align-items: center;
+    display: flex;
+}
+.FinishedTasks_List_Item_CheckboxContainerMark{
+    display: flex;
+    width: 30px;
+    height: inherit;
+    border-radius: 100%;
+    background-color: rgb(244 244 244);
+    filter: drop-shadow(0px 0px 1px rgba(0, 0, 0, 0.2));
+}
+
 .Unfinished_Tasks{
     font-size: 1.5rem;
     list-style: none;
@@ -124,13 +165,30 @@ html, body{
     animation-fill-mode: forwards;
 }
 
-
 @keyframes displayToLeft{
     0%{margin-left: 50%;}
     100%{margin-left: 0%;}
 }
 
+.DeletingItem{
+    animation-name: deletingItem;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
 
+@keyframes deletingItem{
+    0% {
+        margin: 0.2rem 0;
+        padding: 1rem 1rem;
+        min-height: 3rem;
+    }
+    100% {
+        margin: 0rem 0;
+        padding: 0rem 0rem;
+        min-height: 0rem !important;
+        overflow-y: hidden;  
+    }
+}
 
 
 #SideMenu{
