--- a/styling/mainPage.css
+++ b/styling/mainPage.css
@@ -25,7 +25,7 @@ body{
     display: flex;
     flex-direction: row;
     list-style: none;
-    font-size: min(30px, 5vw);
+    font-size: min(30px, 3vw);
     padding: 30px min(5rem, 9vw);
     align-items: center;
     text-align: center;
@@ -47,6 +47,16 @@ body{
 .Header__NavBar--List_Title img{
     margin-right: 10px;
     max-width: 40px;
+}
+
+.Header__NavBar--List_TaskAddition{
+    padding: 3px min(1.5rem, 4vw);
+    border-radius: 13px;
+    font-size: min(25px, 3.5vw);
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.20);
+    background-color: var(--MainGreenColor);
+    color: var(--MainBrownColor);
+    margin: auto;
 }
 
 .Header__NavBar--List_SignIn, .Header__NavBar--List_SignUp{
@@ -204,4 +214,29 @@ body{
     .Header__NavBar--List li:nth-child(3){
         margin-left: 2vw;
     }
+}
+
+
+#NewTask_Frame{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    width: min(700px, 90%);
+    height: min(400px, 50vw);
+    background-color: rgb(244,244,244);
+    border-radius: min(5vw, 30px);
+    padding: min(2rem, 7vw);
+    box-sizing: border-box;
+}
+
+#NewTask_FrameBackgroundFilter{
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(12, 12, 12, 0.3);
+    backdrop-filter: blur(10px);
+    z-index: 9;
+    top: 0;
 }
