--- a/styling/profilePage.css
+++ b/styling/profilePage.css
@@ -125,3 +125,11 @@ body.profile{
     color: black;
     text-align: center;
 }
+
+#StadisticsDiv{
+    margin: auto;
+}
+
+#StadisticsDiv p{
+    margin-top: 2rem;
+}
